Revert "🤖 Auto-update Performance Test Results"
This reverts commit fdac49882eea5c9f256094d0d68b36ad4abc815f.